--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -37,17 +37,17 @@ ja:
     failure:
       already_authenticated: すでにログインしています。
       inactive: アカウントが有効化されていません。メールに記載された手順にしたがって、アカウントを有効化してください。
-      invalid: "%{authentication_keys}またはパスワードが違います。"
+      invalid: '%{authentication_keys}またはパスワードが違います。'
       last_attempt: もう一回誤るとアカウントがロックされます。
       locked: アカウントはロックされています。
-      not_found_in_database: "%{authentication_keys}またはパスワードが違います。"
+      not_found_in_database: '%{authentication_keys}またはパスワードが違います。'
       timeout: セッションがタイムアウトしました。もう一度ログインしてください。
       unauthenticated: ログインもしくはアカウント登録してください。
       unconfirmed: メールアドレスの本人確認が必要です。
     mailer:
       confirmation_instructions:
         action: メールアドレスの確認
-        greeting: "%{recipient}様"
+        greeting: '%{recipient}様'
         instruction: 以下のリンクをクリックし、メールアドレスの確認手続を完了させてください。
         subject: メールアドレス確認メール
       email_changed:
@@ -56,25 +56,25 @@ ja:
         message_unconfirmed: メールアドレスが（%{email}）変更されたため、メールを送信しています。
         subject: メール変更完了
       password_change:
-        greeting: "%{recipient}様"
+        greeting: '%{recipient}様'
         message: パスワードが再設定されました。
         subject: パスワードの変更について
       reset_password_instructions:
         action: パスワード変更
-        greeting: "%{recipient}様"
+        greeting: '%{recipient}様'
         instruction: パスワード再設定の依頼を受けたため、メールを送信しています。下のリンクからパスワードの再設定ができます。
         instruction_2: パスワード再設定の依頼をしていない場合、このメールを無視してください。
         instruction_3: パスワードの再設定は、上のリンクから新しいパスワードを登録するまで完了しません。
         subject: パスワードの再設定について
       unlock_instructions:
         action: アカウントのロック解除
-        greeting: "%{recipient}様"
+        greeting: '%{recipient}様'
         instruction: アカウントのロックを解除するには下のリンクをクリックしてください。
         message: ログイン失敗が繰り返されたため、アカウントはロックされています。
         subject: アカウントのロック解除について
     omniauth_callbacks:
-      failure: "%{kind} アカウントによる認証に失敗しました。理由：（%{reason}）"
-      success: "%{kind} アカウントによる認証に成功しました。"
+      failure: '%{kind} アカウントによる認証に失敗しました。理由：（%{reason}）'
+      success: '%{kind} アカウントによる認証に成功しました。'
     passwords:
       edit:
         change_my_password: パスワードを変更する
@@ -95,15 +95,15 @@ ja:
       edit:
         are_you_sure: 本当によろしいですか？
         cancel_my_account: アカウント削除
-        currently_waiting_confirmation_for_email: "%{email} の確認待ち"
+        currently_waiting_confirmation_for_email: '%{email} の確認待ち'
         leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
-        title: "%{resource}編集"
+        title: '%{resource}編集'
         unhappy: 気に入りません
         update: 更新
         we_need_your_current_password_to_confirm_your_changes: 変更を反映するには現在のパスワードを入力してください
       new:
         sign_up: アカウント登録
-        registration_message: "アカウント登録に必要な情報を入力してください"
+        registration_message: 'アカウント登録に必要な情報を入力してください'
         signed_up: アカウント登録が完了しました。
         signed_up_but_inactive: ログインするためには、アカウントを有効化してください。
         signed_up_but_locked: アカウントがロックされているためログインできません。
@@ -111,15 +111,15 @@ ja:
         update_needs_confirmation: アカウント情報を変更しました。変更されたメールアドレスの本人確認のため、本人確認用メールより確認処理をおこなってください。
         updated: アカウント情報を変更しました。
         updated_but_not_signed_in: あなたのアカウントは正常に更新されましたが、パスワードが変更されたため、再度ログインしてください。
-        password_placeholder: "パスワード（%{minimum_password_length}字以上）"
+        password_placeholder: 'パスワード（%{minimum_password_length}字以上）'
     sessions:
       already_signed_out: 既にログアウト済みです。
       new:
         sign_in: ログイン
-        login_message: "ログインに必要な情報を入力してください"
-        forgot_your_password: "パスワードをお忘れの方"
-        no_account_message: "アカウントをお持ちでない方は"
-        sign_up: "新規登録"
+        login_message: 'ログインに必要な情報を入力してください'
+        forgot_your_password: 'パスワードをお忘れの方'
+        no_account_message: 'アカウントをお持ちでない方は'
+        sign_up: '新規登録'
       signed_in: ログインしました。
       signed_out: ログアウトしました。
     shared:
@@ -129,9 +129,9 @@ ja:
         didn_t_receive_unlock_instructions: アカウントのロック解除方法のメールを受け取っていませんか？
         forgot_your_password: パスワードを忘れましたか？
         sign_in: ログイン
-        sign_in_with_provider: "%{provider}でログイン"
+        sign_in_with_provider: '%{provider}でログイン'
         sign_up: アカウント登録
-      minimum_password_length: "（%{count}字以上）"
+      minimum_password_length: '（%{count}字以上）'
     unlocks:
       new:
         resend_unlock_instructions: アカウントのロック解除方法を再送する
@@ -147,4 +147,4 @@ ja:
       not_locked: はロックされていません。
       not_saved:
         one: エラーが発生したため %{resource} は保存されませんでした。
-        other: "%{count} 件のエラーが発生したため %{resource} は保存されませんでした。"
+        other: '%{count} 件のエラーが発生したため %{resource} は保存されませんでした。'
